[package]
name = "firebase-jwt-auth"
version = "0.1.0"
authors = ["Ryan Bluth <ryanbluth93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.3"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.62"
serde = "1.0.117"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"
thiserror = "1.0.21"
chrono = { version = "0.4.19", features = ["serde"] }